--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-jira = "*"
+jira = "==3.8.0"
+requests = "==2.32.4"
 
 [requires]
 python_version = "3.10"
